// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染input 1`] = `
<div
  className="sinoui-base-input "
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染不可用的Input 1`] = `
<div
  className="sinoui-base-input sinoui-base-input--disabled "
  data-testid="baseInput"
  disabled={true}
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染密集模式下的Input 1`] = `
<div
  className="sinoui-base-input "
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染错误状态下的input 1`] = `
<div
  className="sinoui-base-input "
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;
